<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_thumbnail">Movie thumbnail.</string>

<!--    Main activity-->
    <string name="error_connection">ERROR: Could not load movie data from the server. Please check your internet connection and try again.</string>

<!--    Detail activity-->
    <string name="user_rating">User rating:</string>
    <string name="release_year">Release year:</string>
    <string name="toggle_favorite_movie">Toggle favorite movie.</string>
    <string name="synopsis">Synopsis</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="play_trailer">Play trailer.</string>

<!--    Options menu-->
    <string name="menu_sort_by_rating">Sort by rating</string>
    <string name="menu_sort_by_popularity">Sort by popularity</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_favorite_movies">Favorite Movies</string>



</resources>
