<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/primary_text_dark"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="@dimen/thumbnail_width"
                android:layout_height="@dimen/thumbnail_height"
                android:contentDescription="@string/movie_thumbnail"
                android:padding="@dimen/padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:src="@drawable/thumbnail_placeholder" />

            <TextView
                android:id="@+id/textView"
                style="@style/MovieDetailText.Label"
                android:text="@string/user_rating"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toTopOf="@+id/iv_movie_poster"
                app:layout_constraintVertical_bias="0.4"/>

            <TextView
                android:id="@+id/tv_user_rating"
                style="@style/MovieDetailText.Content"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                tools:text="7.50" />

            <TextView
                android:id="@+id/textView2"
                style="@style/MovieDetailText.Label"
                android:layout_marginTop="@dimen/top_margins"
                android:text="@string/release_year"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/tv_release_year"
                style="@style/MovieDetailText.Content"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@id/textView2"
                tools:text="2020" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/iv_movie_poster"
                android:layout_marginTop="@dimen/top_margins"/>

            <TextView
                android:id="@+id/textView5"
                style="@style/MovieDetailText.Label"
                android:layout_marginTop="@dimen/top_margins"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                android:text="@string/synopsis"/>

            <TextView
                android:id="@+id/tv_plot_synopsis"
                style="@style/MovieDetailText.Content"
                android:layout_marginTop="@dimen/top_margins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="Synopsis" />

            <View
                android:id="@+id/divider_trailers"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/tv_plot_synopsis"
                android:layout_marginTop="@dimen/top_margins"/>

            <TextView
                android:id="@+id/textView3"
                style="@style/MovieDetailText.Label"
                android:layout_marginTop="@dimen/top_margins"
                android:text="@string/trailers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_trailers" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="@+id/tv_plot_synopsis"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginTop="@dimen/top_margins"/>

            <View
                android:id="@+id/divider_reviews"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@+id/rv_trailers"
                android:layout_marginTop="@dimen/top_margins"/>

            <TextView
                android:id="@+id/textView4"
                style="@style/MovieDetailText.Label"
                android:layout_marginTop="@dimen/top_margins"
                android:text="@string/reviews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_reviews" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="@+id/tv_plot_synopsis"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginTop="8dp"/>


            <ImageButton
                android:id="@+id/ib_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="toggleFavorite"
                app:layout_constraintBottom_toBottomOf="@+id/iv_movie_poster"
                app:layout_constraintEnd_toEndOf="@+id/tv_release_year"
                app:layout_constraintStart_toEndOf="@+id/iv_movie_poster"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@android:drawable/star_big_off"
                android:contentDescription="@string/toggle_favorite_movie"/>

        </androidx.constraintlayout.widget.ConstraintLayout>






</ScrollView>